fix: align menu items

--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -136,8 +136,8 @@
 
 .main-header__nav ul {
   @include reset-list;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(4, max-content);
   justify-content: space-between;
 
   @media (max-width: 1023px) {
